--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@icons-pack/react-simple-icons": "^9.6.0",
-    "gradielicious-react": "^1.0.0",
+    "gradielicious-react": "1.1.0",
     "lucide-react": "^0.408.0",
     "next": "14.2.5",
     "react": "^18",
